Update ISC18 page

--- a/events/20180624-isc18/index.html
+++ b/events/20180624-isc18/index.html
@@ -88,6 +88,8 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
+        <span style="display: block; float: right;"><a href="https://www.isc-hpc.com/" target="_blank"><img src="./ISC_hp_logo_72dpi_rgb.png" height="100" alt="ISC18"></a></span>
+
         <p class="lead">
           AIST starts operation of ABCI, which is a publicly available cloud infrastructure for
           AI research and development, from this July and RWBC-OIL will start AI research using ABCI.
@@ -119,24 +121,21 @@
         <h4>Posters</h4>
         <table border="1" class="lead">
           <tr>
-            <td style="padding:10px;"><a href="./poster00.pdf" target="_blank"><img src="./poster00.png" alt="ABCI No.1"></a><br>ABCI No.1</td>
-            <td style="padding:10px;"><a href="./poster01.pdf" target="_blank"><img src="./poster00.png" alt="ABCI No.2"></a><br>ABCI No.2</td>
+            <td style="padding:10px;"><a href="./poster00.pdf" target="_blank"><img src="./poster00.png" alt="ABCI Hardware"></a><br>ABCI Hardware</td>
+            <td style="padding:10px;"><a href="./poster01.pdf" target="_blank"><img src="./poster01.png" alt="ABCI ABCI Software & Services"></a><br>ABCI Software & Services</td>
           </tr>
           <tr>
-            <td style="padding:10px;"><a href="./poster02.pdf" target="_blank"><img src="./poster00.png" alt="TokyoTech TSUBAME"></a><br>TokyoTech Tsubame</td>
-            <td style="padding:10px;"><a href="./poster03.pdf" target="_blank"><img src="./poster00.png" alt="RWBC-OIL No.1"></a><br>RWBC-OIL No.1</td>
+            <td style="padding:10px;"><a href="./poster02.pdf" target="_blank"><img src="./poster02.png" alt="TokyoTech TSUBAME"></a><br>TokyoTech Tsubame</td>
+            <td style="padding:10px;"><a href="./poster03.pdf" target="_blank"><img src="./poster03.png" alt="RWBC-OIL Overview"></a><br>RWBC-OIL Overview</td>
           </tr>
           <tr>
-            <td style="padding:10px;"><a href="./poster04.pdf" target="_blank"><img src="./poster00.png" alt="RWBC-OIL No.2"></a><br>RWBC-OIL No.2</td>
-            <td style="padding:10px;"><a href="./poster05.pdf" target="_blank"><img src="./poster00.png" alt="RWBC-OIL No.3"></a><br>RWBC-OIL No.3</td>
+            <td style="padding:10px;"><a href="./poster04.pdf" target="_blank"><img src="./poster04.png" alt="RWBC-OIL Research Group"></a><br>RWBC-OIL Research Group</td>
+            <td style="padding:10px;"><a href="./poster05.pdf" target="_blank"><img src="./poster05.png" alt="RWBC-OIL Applications"></a><br>RWBC-OIL Applications</td>
           </tr>
         </table>
 
         <h3>Presentations</h3>
         <h4>Research Poster</h4>
-        <p class="indent-block lead">
-          An RWBC-OIL RA from TokyoTech will give a research poster presentation.
-        </p>
         <p class="indent-block lead">
           <span class="presentation-title"><a href="https://2018.isc-program.com/?page_id=10&id=post109&sess=sess113" target="_blank">(RP16) HuronFS : Hierarchical, User-level and On-demand Burst Buffer File System</a></span><br>
           <span class="presentation-speaker">Tianqi Xu, Kento Sato, Satoshi Matsuoka</span><br>
@@ -144,23 +143,20 @@
           Location: Substanz 1, 2
         </p>
 
-        <h4>Workshop Presentation</h4>
+        <h4>Workshop Presentation @ <a href="http://nowlab.cse.ohio-state.edu/exacomm/" target="_blank">ExaComm 2018 workshop</a></h4>
         <p class="indent-block lead">
-          Dr. Sato will give an inivited talk about ABCI in <a href="http://nowlab.cse.ohio-state.edu/exacomm/" target="_blank">ExaComm 2018 workshop</a>.
-        </p>
-        <p class="indent-block lead">
-          Title: ABCI: AI Bridging Cloud Infrastructure for Scalable AI/Big Data<br>
-          Speaker: Dr. Hitoshi Sato<br>
+          <span class="presentation-title">ABCI: AI Bridging Cloud Infrastructure for Scalable AI/Big Data</span><br>
+          <span class="presentation-speaker">Dr. Hitoshi Sato</span><br>
           Date: Thursday, June 28th 12:00pm - 12:30pm<br>
           Location: Basalt
         </p>
 
-
+        <!--
         <h3>Rankings</h3>
         <ol class="lead">
           <li>ABCI ranked #X in Top500 list.</li>
           <li>ABCI ranked #Y in Green500 list.</li>
-        </ol>
+        </ol>-->
       </div>
     </div>
   </div>
