--- a/events/index-en.html
+++ b/events/index-en.html
@@ -98,7 +98,7 @@
                           <ul>
                             <li>Date: 2018/06/25 - 2018/06/27</li>
                             <li>Venue: Frankfurt, Germany</li>
-                            <li>More information (Preparing)</li>
+                            <li><a href="./20180624-isc18/index.html">More information</a></li>
                           </ul>
 
 			<h3>The 1st RWBC-OIL Workshop</h3>
