--- a/events/index.html
+++ b/events/index.html
@@ -98,7 +98,7 @@
 			<ul>
 			  <li>開催日程: 2018/06/25 - 2018/06/27</li>
 			  <li>開催場所: フランクフルト, ドイツ</li>
-			  <li>詳細(準備中)</li>
+			  <li><a href="./20180624-isc18/index.html">詳細</a></li>
 			</ul>
 
 			<h3>第1回 RWBC-OIL Workshop</h3>
