--- a/events/20181111-sc18/index.html
+++ b/events/20181111-sc18/index.html
@@ -137,31 +137,24 @@
         <h3>Presentations</h3>
 
 
-        <h4>Technical Poster</h4>
+        <h4>Research Poster</h4>
         <p class="indent-block lead">
-          <span class="presentation-title"><!--a href="https://2018.isc-program.com/?page_id=10&id=post109&sess=sess113" target="_blank" -->Data Analytics for System and Facility Energy Management BoFTBE</a></span><br>
+          <span class="presentation-title"><a href="https://sc18.supercomputing.org/presentation/?id=post120&sess=sess322" target="_blank">FlowOS-RM: Disaggregated Resource Management System</a></span><br>
           <span class="presentation-speaker">Ryousei Takano, Kuniyasu Suzaki, Hidetaka Koie</span><br>
+          Date: Tuesday, Nov. 13th, 8:30am - 5pm<br>
           Location: C2/3/4 Ballroom
         </p>
 
 
-        <h4>Presentation</h4>
+        <h4>BoF Presentation</h4>
         <p class="indent-block lead">
-          <span class="presentation-title"><!--a href="https://2018.isc-program.com/?page_id=10&id=post109&sess=sess113" target="_blank" -->Data Analytics for System and Facility Energy Management BoFTBE</a></span><br>
+          <span class="presentation-title"><a href="https://sc18.supercomputing.org/presentation/?id=bof185&sess=sess436" target="_blank">Data Analytics for System and Facility Energy Management</a></span><br>
           <span class="presentation-speaker">Ryousei Takano</span><br>
           Date: Thursday, Nov. 15th 12:15pm - 1:15pm<br>
           Location: D171
         </p>
 
-        <!--h4>Research Poster</h4>
-        <p class="indent-block lead">
-          <span class="presentation-title"><a href="https://2018.isc-program.com/?page_id=10&id=post109&sess=sess113" target="_blank">(RP16) HuronFS : Hierarchical, User-level and On-demand Burst Buffer File System</a></span><br>
-          <span class="presentation-speaker">Tianqi Xu, Kento Sato, Satoshi Matsuoka</span><br>
-          Date: Tuesday, June 26th 8:30am - 10am<br>
-          Location: Substanz 1, 2
-        </p>
-
-        <h4>Workshop Presentation @ <a href="http://nowlab.cse.ohio-state.edu/exacomm/" target="_blank">ExaComm 2018 workshop</a></h4>
+        <!--h4>Workshop Presentation @ <a href="http://nowlab.cse.ohio-state.edu/exacomm/" target="_blank">ExaComm 2018 workshop</a></h4>
         <p class="indent-block lead">
           <span class="presentation-title">ABCI: AI Bridging Cloud Infrastructure for Scalable AI/Big Data</span><br>
           <span class="presentation-speaker">Dr. Hitoshi Sato</span><br>
