Updated SC18 event

--- a/events/20181111-sc18/index.html
+++ b/events/20181111-sc18/index.html
@@ -136,6 +136,13 @@
 
         <h3>Presentations</h3>
 
+        <h4>Invited Talk</h4>
+        <p class="indent-block lead">
+          <span class="presentation-title"><a href="https://sc18.supercomputing.org/presentation/?id=inv112&sess=sess228" target="_blank">ABCI – Envisioning High Performance Human-Centered AI for Industry</a></span><br>
+          <span class="presentation-speaker">Satoshi Sekiguchi</span><br>
+          Date: Wednesday, Nov. 14th, 3:30pm - 4:15pm<br>
+          Location: Exhibit Hall B
+        </p>
 
         <h4>Research Poster</h4>
         <p class="indent-block lead">
@@ -144,7 +151,6 @@
           Date: Tuesday, Nov. 13th, 8:30am - 5pm<br>
           Location: C2/3/4 Ballroom
         </p>
-
 
         <h4>BoF Presentation</h4>
         <p class="indent-block lead">
