--- a/events/index-en.html
+++ b/events/index-en.html
@@ -94,6 +94,13 @@
 		<div class="col-md-12">
 		<!-- Add new event on top -->
 
+    <h3>Exhibit RWBC-OIL Reserch Activities at SC 2018</h3>
+      <ul>
+        <li>Date: 2018/11/11 - 2018/11/16</li>
+        <li>Venue: Dallas, US</li>
+        <li><a href="./20181111-sc18/index.html">More information</a></li>
+      </ul>
+      
                         <h3>Exhibit RWBC-OIL Reserch Activities at ISC 2018</h3>
                           <ul>
                             <li>Date: 2018/06/25 - 2018/06/27</li>
