--- a/events/index.html
+++ b/events/index.html
@@ -94,6 +94,13 @@
 		<div class="col-md-12">
 		<!-- Add new event on top -->
 
+    <h3>SC 2018 Exhibitionでの研究成果展示</h3>
+      <ul>
+        <li>Date: 2018/11/11 - 2018/11/16</li>
+        <li>開催場所: ダラス, 、アメリカ</li>
+        <li><a href="./20181111-sc18/index.html">詳細</a></li>
+      </ul>
+
 			<h3>ISC 2018 Exhibitionでの研究成果展示</h3>
 			<ul>
 			  <li>開催日程: 2018/06/25 - 2018/06/27</li>
