--- a/events/20181111-sc18/index.html
+++ b/events/20181111-sc18/index.html
@@ -76,7 +76,7 @@
     <div class="row">
       <ul class="breadcrumb">
         <li><a href="../index.html">Home</a></li>
-        <li><a href="../index.html">Events</a></li>
+        <li><a href="../index-en.html">Events</a></li>
         <li class="active">RWBC-OIL Activities at SC18</li>
       </ul>
     </div>
