--- a/events/20181111-sc18/index.html
+++ b/events/20181111-sc18/index.html
@@ -75,7 +75,7 @@
   <div class="container">
     <div class="row">
       <ul class="breadcrumb">
-        <li><a href="../index.html">Home</a></li>
+        <li><a href="../index-en.html">Home</a></li>
         <li><a href="../index-en.html">Events</a></li>
         <li class="active">RWBC-OIL Activities at SC18</li>
       </ul>
