Update SC18 event.

--- a/events/20181111-sc18/index.html
+++ b/events/20181111-sc18/index.html
@@ -167,6 +167,13 @@
 
         <h4>BoF Presentation</h4>
         <p class="indent-block lead">
+          <span class="presentation-title"><a href="https://sc18.supercomputing.org/presentation/?id=bof140&sess=sess408" target="_blank">The Green 500: Trends in Energy Efficient Supercomputing</a></span><br>
+          <span class="presentation-speaker">Hirotaka Ogawa</span><br>
+          Date: Thursday, Nov. 15th 5:15pm - 6:45pm<br>
+          Location: D167
+        </p>
+
+        <p class="indent-block lead">
           <span class="presentation-title"><a href="https://sc18.supercomputing.org/presentation/?id=bof185&sess=sess436" target="_blank">Data Analytics for System and Facility Energy Management</a></span><br>
           <span class="presentation-speaker">Ryousei Takano</span><br>
           Date: Thursday, Nov. 15th 12:15pm - 1:15pm<br>
