Add ISC contents

--- a/events/20190616-isc19/index.html
+++ b/events/20190616-isc19/index.html
@@ -126,20 +126,22 @@
         </p>
 
         <h4>Posters</h4>
-        <table border="1" class="lead">
-          <tr>
-            <td style="padding:10px;"><a href="../20180624-isc18/poster00.pdf" target="_blank"><img src="../20180624-isc18/poster00.png" alt="ABCI Hardware"></a><br>ABCI Hardware</td>
-            <td style="padding:10px;"><a href="../20180624-isc18/poster01.pdf" target="_blank"><img src="../20180624-isc18/poster01.png" alt="ABCI ABCI Software & Services"></a><br>ABCI Software & Services</td>
-          </tr>
-          <tr>
-            <td style="padding:10px;"><a href="../20180624-isc18/poster02.pdf" target="_blank"><img src="../20180624-isc18/poster02.png" alt="TokyoTech TSUBAME"></a><br>TokyoTech Tsubame</td>
-            <td style="padding:10px;"><a href="../20180624-isc18/poster03.pdf" target="_blank"><img src="../20180624-isc18/poster03.png" alt="RWBC-OIL Overview"></a><br>RWBC-OIL Overview</td>
-          </tr>
-          <tr>
-            <td style="padding:10px;"><a href="../20180624-isc18/poster04.pdf" target="_blank"><img src="../20180624-isc18/poster04.png" alt="RWBC-OIL Research Group"></a><br>RWBC-OIL Research Group</td>
-            <td style="padding:10px;"><a href="../20180624-isc18/poster05.pdf" target="_blank"><img src="../20180624-isc18/poster05.png" alt="RWBC-OIL Applications"></a><br>RWBC-OIL Applications</td>
-          </tr>
-        </table>
+        <p class="indent-block lead">
+          <figure style="float: left; padding-right: 20px;">
+            <figcaption>ABCI</figcaption>
+            <a href="./poster00.pdf" target="_blank"><img src="./poster00.png" alt="ABCI"></a>
+          </figure>
+          <figure style="float: left; padding-right: 20px;">
+            <figcaption>TSUBAME 3.0</figcaption>
+            <a href="./poster01.pdf" target="_blank"><img src="./poster01.png" alt="TSUBAME"></a>
+          </figure>
+          <figure style="float: left; padding-right: 20px;">
+            <figcaption>RWBC-OIL Research Activities</figcaption>
+            <a href="./poster02.pdf" target="_blank"><img src="./poster02.png" alt="RWBC-OIL Research Activities"></a>
+          </figure>
+        </p>
+
+        <p style="clear: both;"></p>
 
         <h3>Research Activities at ISC19</h3>
         <h4>Presentation</h4>
