--- a/index-en.html
+++ b/index-en.html
@@ -283,6 +283,10 @@
 							<td>RWBC-OIL Deputy Director</td><td></td>
 							<td>Toshio Endo (Professor, TokyoTech)</td>
 						</tr>
+            <tr>
+							<td>RWBC-OIL Deputy Director</td><td></td>
+              <td>Katsuki Fujisawa (Joint Research Fellow, AIST)</td>
+						</tr>
 					</table>
 					<!--</p> -->
 
@@ -298,16 +302,18 @@
 					  Satoshi Matsuoka (Specially Appointed Professor, TokyoTech)<br>
 					  Katsuki Fujisawa (Joint Research Fellow, AIST)<br>
 					  Hirotaka Ogawa (Research Leader, AIST)<br>
-					  Kuniyasu Suzaki (Senior Researcher, AIST)<br>
+					  <!-- Kuniyasu Suzaki (Senior Researcher, AIST)<br>-->
 					  Takahiro Hirofuchi (Senior Researcher, AIST)<br>
 					  Yuusuke Tanimura (Senior Researcher, AIST)<br>
-					  Hitoshi Sato (Senior Researcher, AIST)<br>
+					  <!-- Hitoshi Sato (Senior Researcher, AIST)<br>-->
 					  Mohamed Wahib (Senior Researcher, AIST)<br>
 					  Shinichiro Takizawa (Visiting Researcher, AIST)<br>
+            Nguyen Truong (Postdoc, AIST)<br>
 					  Shinichi Miura (Specially Appointed Assistant Professor, TokyoTech / Visiting Researcher, AIST)<br>
-					  Koichi Hagishima (Visiting Researcher, AIST)<br>
-					  Atsushi Sasaki (Visiting Researcher, AIST)<br>
-					  Tetsuo Fukunaga (Visiting Researcher, AIST)
+					  <!--Koichi Hagishima (Visiting Researcher, AIST)<br> -->
+					  <!--Atsushi Sasaki (Visiting Researcher, AIST)<br>-->
+					  Tetsuo Fukunaga (Visiting Researcher, AIST)<br>
+            Peng Chen (Technical Staff, AIST)
 					</p>
 
 					<h3>Real World Big Data/AI Applications Research Team</h3>
@@ -337,10 +343,10 @@
 					  Takashi Ishida (Associate Professor, TokyoTech)<br>
 					  Masahito Ohue (Assistant Professor, TokyoTech)<br>
 					  Masakazu Sekijima (Research Unit Leader, TokyoTech)<br>
-					  Jun Sese (Research Leader, AIST)<br>
+					  Jun Sese (Visiting Researcher, AIST)<br>
 					  Kentaro Tomii (Research Leader, AIST)<br>
-					  Kenji Nagata (Senior Researcher, AIST)<br>
-					  Kuo Tony (Postdoc, AIST)
+					  <!-- Kenji Nagata (Senior Researcher, AIST)<br>-->
+					  <!-- Kuo Tony (Postdoc, AIST) -->
 					</p>
 
 					<p class="lead">
