--- a/index.html
+++ b/index.html
@@ -282,7 +282,8 @@
 					<!--p class="lead">RWBC-OIL ラボ長　松岡 聡（東京工業大学 教授）<a href="#" class="btn btn-warning">ラボ長挨拶</a><br-->
 					<p class="lead"><!--RWBC-OIL ラボ長　藤澤 克樹（産業技術総合研究所 特定フェロー）<a href="#" class="btn btn-warning">ラボ長挨拶</a--><br>
 					RWBC-OIL ラボ長　小川 宏高（産業技術総合研究所 研究チーム長）<br>
-					RWBC-OIL 副ラボ長　遠藤 敏夫（東京工業大学 教授）</p>
+					RWBC-OIL 副ラボ長　遠藤 敏夫（東京工業大学 教授）<br>
+					RWBC-OIL 副ラボ長　 藤澤 克樹（産総研 特定フェロー）</p>
 
 
 					<h3>実社会HPC班</h3>
@@ -296,16 +297,18 @@
 					  松岡 聡（東工大 特任教授）<br>
 					  藤澤 克樹（産総研 特定フェロー）<br>
 					  小川 宏高（産総研 研究チーム長）<br>
-					  須崎 有康（産総研 主任研究員）<br>
+					  <!-- 須崎 有康（産総研 主任研究員）<br>-->
 					  広渕 崇宏（産総研 主任研究員）<br>
 					  谷村 勇輔（産総研 主任研究員）<br>
-					  佐藤 仁（産総研 主任研究員）<br>
+					  <!-- 佐藤 仁（産総研 主任研究員）<br> -->
 					  Mohamed Wahib（産総研 主任研究員）<br>
 					  滝澤 真一朗（産総研 招聘研究員）<br>
+            Nguyen Truong（産総研 特別研究員）<br>
 					  三浦 信一（産総研 招聘研究員）<br>
-					  萩島 功一（産総研 招聘研究員）<br>
-					  佐々木 淳（産総研 招聘研究員）<br>
-					  福永 哲雄（産総研 招聘研究員）
+					  <!--萩島 功一（産総研 招聘研究員）<br> -->
+					  <!-- 佐々木 淳（産総研 招聘研究員）<br> -->
+					  福永 哲雄（産総研 招聘研究員）<br>
+            陳 鵬（産総研 テクニカルスタッフ）
 					</p>
 
 					<h3>データ活用班</h3>
@@ -335,10 +338,10 @@
 					  石田 貴士（東工大 准教授）<br>
 					  大上 雅史（東工大 助教）<br>
 					  関嶋 政和（東工大 准教授）<br>
-					  瀬々 潤（産総研 研究チーム長）<br>
+					  瀬々 潤（産総研 招聘研究員）<br>
 					  富井 健太郎（産総研 研究チーム長）<br>
-					  永田 賢二（産総研 主任研究員）<br>
-					  Kuo Tony（産総研 特別研究員）
+					  <!--永田 賢二（産総研 主任研究員）<br>-->
+					  <!--Kuo Tony（産総研 特別研究員） -->
 					</p>
 
 					<p class="lead">
