--- a/events/index.html
+++ b/events/index.html
@@ -94,6 +94,13 @@
 		<div class="col-md-12">
 		<!-- Add new event on top -->
 
+      <h3>SC 2018 Exhibitionでの研究成果展示</h3>
+      <ul>
+        <li>Date: 2018/11/11 - 2018/11/16</li>
+        <li>開催場所: ダラス, 、アメリカ</li>
+        <li><a href="./20191117-sc19/index.html">詳細</a></li>
+      </ul>
+
       <h3>ABCIオープンセミナー「ABCIの産業利用とキラーアプリ開発」</h3>
       <ul>
         <li>開催日程: 2019/07/31</li>
@@ -128,6 +135,8 @@
 			  <li>開催場所: 東京工業大学 蔵前会館</li>
 			  <li><a href="./20180508-workshop01.html">詳細</a></li>
 			</ul>
+
+
 
 		</div>
 	    </div>
