--- a/events/20191117-sc19/index.html
+++ b/events/20191117-sc19/index.html
@@ -154,7 +154,7 @@
           <span class="presentation-title"><a href="https://sc19.supercomputing.org/presentation/?id=pap220&sess=sess161" target="_blank">A Versatile Software Systolic Execution Model for GPU Memory Bound Kernels</a></span><br>
           <span class="presentation-speaker">Peng Chen</span><br>
           Date: Wednesday, 20 November 2019, 4:30pm-5pm<br>
-          Location: Exhibit Hall B
+          Location: 405-406-407
         </p>
         <p class="indent-block lead">
           <span class="presentation-title"><a href="https://sc19.supercomputing.org/presentation/?id=pan104&sess=sess224" target="_blank">HPC Big Data and AI: Computing under Constraints</a></span><br>
@@ -165,8 +165,8 @@
         <p class="indent-block lead">
           <span class="presentation-title"><a href="https://sc19.supercomputing.org/presentation/?id=pap220&sess=sess161" target="_blank">iFDK: A Scalable Framework for Instant High-Resolution Image Reconstruction</a></span><br>
           <span class="presentation-speaker">Peng Chen</span><br>
-          Date: Wednesday, 20 November 2019, 4:30pm-5pm<br>
-          Location:405-406-407
+          Date: Thursday, 21 November 2019, 3:30pm - 4pm<br>
+          Location:301-302-303
         </p>
         <p class="indent-block lead">
           <span class="presentation-title"><a href="https://sc19.supercomputing.org/presentation/?id=pan121&sess=sess235" target="_blank">Open Science in a Changing HPC Landscape</a></span><br>
