--- a/events/20191117-sc19/index.html
+++ b/events/20191117-sc19/index.html
@@ -183,8 +183,8 @@
         <p class="indent-block lead">
           <span class="presentation-title"><a href="https://sc19.supercomputing.org/presentation/?id=wksp102&sess=sess125" target="_blank">HyperX Topology: First At-Scale Implementation and Comparison to the Fat-Tree</a></span><br>
           <span class="presentation-speaker">Jens Domke</span><br>
-          Date: Monday, 18 November 2019, 9am-5:30pm<br>
-          Location:702
+          Date: Wednesday, 20 November 2019, 11am - 11:30am<br>
+          Location:301-302-303
         </p>
 
 
