--- a/events/20191117-sc19/index.html
+++ b/events/20191117-sc19/index.html
@@ -152,37 +152,37 @@
         <h4>Presentation</h4>
         <p class="indent-block lead">
           <span class="presentation-title"><a href="https://sc19.supercomputing.org/presentation/?id=pap220&sess=sess161" target="_blank">A Versatile Software Systolic Execution Model for GPU Memory Bound Kernels</a></span><br>
-          <span class="presentation-speaker">Peng Chen</span><br>
+          <span class="presentation-speaker">Peng Chen, Mohamed Wahib, Shinichiro Takizawa, Ryousei Takano, Satoshi Matsuoka</span><br>
           Date: Wednesday, 20 November 2019, 4:30pm-5pm<br>
           Location: 405-406-407
         </p>
         <p class="indent-block lead">
           <span class="presentation-title"><a href="https://sc19.supercomputing.org/presentation/?id=pan104&sess=sess224" target="_blank">HPC Big Data and AI: Computing under Constraints</a></span><br>
-          <span class="presentation-speaker">Satoshi Matsuoka</span><br>
+          <span class="presentation-speaker">Satoshi Matsuoka, Dieter Kranzlmueller, Ewa Deelman, Elizabeth Bautista</span><br>
           Date: Friday, 22 November 2019, 10:30am-12pm<br>
           Location:205-207
         </p>
         <p class="indent-block lead">
           <span class="presentation-title"><a href="https://sc19.supercomputing.org/presentation/?id=pap223&sess=sess148" target="_blank">iFDK: A Scalable Framework for Instant High-Resolution Image Reconstruction</a></span><br>
-          <span class="presentation-speaker">Peng Chen</span><br>
+          <span class="presentation-speaker">Peng Chen, Mohamed Wahib, Shinichiro Takizawa, Ryousei Takano, Satoshi Matsuoka</span><br>
           Date: Thursday, 21 November 2019, 3:30pm - 4pm<br>
           Location:301-302-303
         </p>
         <p class="indent-block lead">
           <span class="presentation-title"><a href="https://sc19.supercomputing.org/presentation/?id=pan121&sess=sess235" target="_blank">Open Science in a Changing HPC Landscape</a></span><br>
-          <span class="presentation-speaker">Satoshi Sekiguchi</span><br>
+          <span class="presentation-speaker">Manish Parashar, Laura Biven, Satoshi Sekiguchi, Frank Wuerthwein, Anita De Waard, Alex Szalay, Gerry Grenier</span><br>
           Date: Wednesday, 20 November 2019, 1:30pm-3pm<br>
           Location:201-203
         </p>
         <p class="indent-block lead">
           <span class="presentation-title"><a href="https://sc19.supercomputing.org/presentation/?id=wksp102&sess=sess125" target="_blank">PHOTONICS: Photonics-Optics Technology Oriented Networking, Information, and Computing Systems</a></span><br>
-          <span class="presentation-speaker">Jiang Xu</span><br>
+          <span class="presentation-speaker">Jiang Xu, Yuichi Nakamura, Yi-Shing Chang, Shu Namiki</span><br>
           Date: Monday, 18 November 2019, 9am-5:30pm<br>
           Location:702
         </p>
         <p class="indent-block lead">
-          <span class="presentation-title"><a href="https://sc19.supercomputing.org/presentation/?id=wksp102&sess=sess125" target="_blank">HyperX Topology: First At-Scale Implementation and Comparison to the Fat-Tree</a></span><br>
-          <span class="presentation-speaker">Jens Domke</span><br>
+          <span class="presentation-title"><a href="https://sc19.supercomputing.org/presentation/?id=pap113&sess=sess150" target="_blank">HyperX Topology: First At-Scale Implementation and Comparison to the Fat-Tree</a></span><br>
+          <span class="presentation-speaker">Jens Domke, Satoshi Matsuoka, Ivan Radanov Ivanov, Yuki Tsushima, Tomoya Yuki, Akihiro Nomura, Shin'ichi Miura, Nic McDonald, Dennis Lee Floyd, Nicolas Dubé</span><br>
           Date: Wednesday, 20 November 2019, 11am - 11:30am<br>
           Location:301-302-303
         </p>
