--- a/index-en.html
+++ b/index-en.html
@@ -324,7 +324,8 @@
 					  Nakamasa Inoue (Assistant Professor, TokyoTech)<br>
 					  Ryousuke Nakamura (Research Leader, AIST)<br>
 					  LEE SHI-WOOK (Senior Researcher, AIST)<br>
-					  Poliyapram Vinayaraj (Postdoc, AIST)
+					  Poliyapram Vinayaraj (Postdoc, AIST) <br>
+            Ken Sakurada (Senior Researcher, AIST)
 					</p>
 
 					<p class="lead">
