櫻田さんは課題2－4ですので、日本語・英語とも高村さんの次に記載をお願いします。

--- a/index-en.html
+++ b/index-en.html
@@ -324,8 +324,7 @@
 					  Nakamasa Inoue (Assistant Professor, TokyoTech)<br>
 					  Ryousuke Nakamura (Research Leader, AIST)<br>
 					  LEE SHI-WOOK (Senior Researcher, AIST)<br>
-					  Poliyapram Vinayaraj (Postdoc, AIST) <br>
-            Ken Sakurada (Senior Researcher, AIST)
+					  Poliyapram Vinayaraj (Postdoc, AIST) <br>           
 					</p>
 
 					<p class="lead">
@@ -352,7 +351,8 @@
 
 					<p class="lead">
 					  Naoaki Okazaki (Professor, TokyoTech)<br>
-					  Hiroya Takamura (Research Leader, AIST)
+					  Hiroya Takamura (Research Leader, AIST)<br>
+					  Ken Sakurada (Senior Researcher, AIST)
 					</p>
 				</div>
 			</div>
