--- a/index.html
+++ b/index.html
@@ -319,8 +319,7 @@
 					  井上 中順（東工大 助教）<br>
 					  中村 良介（産総研 研究チーム長）<br>
 					  李時旭（産総研 主任研究員）<br>
-					  Poliyapram Vinayaraj（産総研 特別研究員）<br>
-            櫻田 健 (産総研 主任研究員)
+					  Poliyapram Vinayaraj（産総研 特別研究員）          
 					</p>
 
 					<p class="lead">
@@ -347,7 +346,8 @@
 
 					<p class="lead">
 					  岡崎 直観（東工大 教授）<br>
-					  高村 大也（産総研 研究チーム長）
+					  高村 大也（産総研 研究チーム長）<br>
+					  櫻田 健 (産総研 主任研究員)
 					</p>
 				</div>
 			</div>
