櫻田さんは課題2－4ですので、日本語・英語とも高村さんの次に記載をお願いします。

--- a/index-en.html
+++ b/index-en.html
@@ -324,7 +324,7 @@
 					  Nakamasa Inoue (Assistant Professor, TokyoTech)<br>
 					  Ryousuke Nakamura (Research Leader, AIST)<br>
 					  LEE SHI-WOOK (Senior Researcher, AIST)<br>
-					  Poliyapram Vinayaraj (Postdoc, AIST) <br>           
+					  Poliyapram Vinayaraj (Postdoc, AIST)           
 					</p>
 
 					<p class="lead">
