Update SC19 page

--- a/events/20191117-sc19/index.html
+++ b/events/20191117-sc19/index.html
@@ -176,16 +176,16 @@
 
         <h4>Panel</h4>
         <p class="indent-block lead">
-          <span class="presentation-title"><a href="https://sc19.supercomputing.org/presentation/?id=pan104&sess=sess224" target="_blank">HPC Big Data and AI: Computing under Constraints</a></span><br>
-          <span class="presentation-speaker">Satoshi Matsuoka</span><br>
-          Date: Friday, 22 November 2019, 10:30am-12pm<br>
-          Location:205-207
-        </p>
-        <p class="indent-block lead">
           <span class="presentation-title"><a href="https://sc19.supercomputing.org/presentation/?id=pan121&sess=sess235" target="_blank">Open Science in a Changing HPC Landscape</a></span><br>
           <span class="presentation-speaker">Satoshi Sekiguchi</span><br>
           Date: Wednesday, 20 November 2019, 1:30pm-3pm<br>
           Location:201-203
+        </p>
+        <p class="indent-block lead">
+          <span class="presentation-title"><a href="https://sc19.supercomputing.org/presentation/?id=pan104&sess=sess224" target="_blank">HPC Big Data and AI: Computing under Constraints</a></span><br>
+          <span class="presentation-speaker">Satoshi Matsuoka</span><br>
+          Date: Friday, 22 November 2019, 10:30am-12pm<br>
+          Location:205-207
         </p>
 
         <h4>BoF</h4>
@@ -212,52 +212,7 @@
           Location:710
         </p>
 
-
-
-
-
-
-        <!--h4>Invited Talk</h4>
-        <p class="indent-block lead">
-          <span class="presentation-title"><a href="https://sc19.supercomputing.org/presentation/?id=inv112&sess=sess228" target="_blank">ABCI – Envisioning High Performance Human-Centered AI for Industry</a></span><br>
-          <span class="presentation-speaker">Satoshi Sekiguchi</span><br>
-          Date: Wednesday, Nov. 14th, 3:30pm - 4:15pm<br>
-          Location: 405-406-407
-        </p>
-
-        <h4>Research Poster</h4>
-        <p class="indent-block lead">
-          <span class="presentation-title"><a href="https://sc19.supercomputing.org/presentation/?id=post120&sess=sess322" target="_blank">FlowOS-RM: Disaggregated Resource Management System</a></span><br>
-          <span class="presentation-speaker">Ryousei Takano, Kuniyasu Suzaki, Hidetaka Koie</span><br>
-          Date: Tuesday, Nov. 13th, 8:30am - 5pm<br>
-          Location: C2/3/4 Ballroom
-        </p>
-
-        <h4>BoF Presentation</h4>
-        <p class="indent-block lead">
-          <span class="presentation-title"><a href="https://sc19.supercomputing.org/presentation/?id=bof140&sess=sess408" target="_blank">The Green 500: Trends in Energy Efficient Supercomputing</a></span><br>
-          <span class="presentation-speaker">Hirotaka Ogawa</span><br>
-          Date: Wednesday, Nov. 14th 5:15pm - 6:45pm<br>
-          Location: D167
-        </p>
-
-        <p class="indent-block lead">
-          <span class="presentation-title"><a href="https://sc19.supercomputing.org/presentation/?id=bof195&sess=sess436" target="_blank">Data Analytics for System and Facility Energy Management</a></span><br>
-          <span class="presentation-speaker">Ryousei Takano</span><br>
-          Date: Thursday, Nov. 15th 12:15pm - 1:15pm<br>
-          Location: D171
-        </p-->
-
-        <!--h4>Workshop Presentation @ <a href="http://nowlab.cse.ohio-state.edu/exacomm/" target="_blank">ExaComm 2019 workshop</a></h4>
-        <p class="indent-block lead">
-          <span class="presentation-title">ABCI: AI Bridging Cloud Infrastructure for Scalable AI/Big Data</span><br>
-          <span class="presentation-speaker">Dr. Hitoshi Sato</span><br>
-          Date: Thursday, June 28th 12:00pm - 12:30pm<br>
-          Location: Basalt
-        </p>
-
-
-        <h3>Press Release</h3>
+        <!--h3>Press Release</h3>
 
         <p class="indent-block lead">
         <ul class="lead">
