Update SC19 page

--- a/events/20191117-sc19/index.html
+++ b/events/20191117-sc19/index.html
@@ -144,7 +144,7 @@
           </tr>
         </table-->
 
-        <h3>Presentations</h3>
+        <h3>Presentations @ Conference</h3>
 
         <h4>Technical Paper</h4>
         <p class="indent-block lead">
@@ -168,6 +168,18 @@
 
         <h4>Research Poster</h4>
         <p class="indent-block lead">
+          <span class="presentation-title"><a href="https://sc19.supercomputing.org/presentation/?id=rpost128&sess=sess348" target="_blank">Poster 48: Runtime System for GPU-Based Hierarchical LU Factorization</a></span><br>
+          <span class="presentation-speaker">Qianxiang Ma, Rio Yokota</span><br>
+          Date: Thursday, 21 November 2019, 8:30am - 5pm<br>
+          Location:E Concourse
+        </p>
+        <p class="indent-block lead">
+          <span class="presentation-title"><a href="https://sc19.supercomputing.org/presentation/?id=rpost147&sess=sess348" target="_blank">Poster 96: TSQR on TensorCores</a></span><br>
+          <span class="presentation-speaker">Hiroyuki Ootomo, Rio Yokota</span><br>
+          Date: Thursday, 21 November 2019, 8:30am - 5pm<br>
+          Location:E Concourse
+        </p>
+        <p class="indent-block lead">
           <span class="presentation-title"><a href="https://sc19.supercomputing.org/presentation/?id=rpost200&sess=sess348" target="_blank">Poster 111: Multiple HPC Environments-Aware Container Image Configuration for Bioinformatics Application</a></span><br>
           <span class="presentation-speaker">Kento Aoyama, Hiroki Watanabe, Masahito Ohue, Yutaka Akiyama</span><br>
           Date: Thursday, 21 November 2019, 8:30am - 5pm<br>
@@ -175,6 +187,12 @@
         </p>
 
         <h4>Panel</h4>
+        <p class="indent-block lead">
+          <span class="presentation-title"><a href="https://sc19.supercomputing.org/presentation/?id=pec220&sess=sess358" target="_blank">Early Career Program: Welcome and Leadership Panel/Discussion</a></span><br>
+          <span class="presentation-speaker">Satoshi Matsuoka</span><br>
+          Date: Monday, 18 November 2019, 8:30am - 10am<br>
+          Location:709
+        </p>
         <p class="indent-block lead">
           <span class="presentation-title"><a href="https://sc19.supercomputing.org/presentation/?id=pan121&sess=sess235" target="_blank">Open Science in a Changing HPC Landscape</a></span><br>
           <span class="presentation-speaker">Satoshi Sekiguchi</span><br>
@@ -210,6 +228,24 @@
           Workshop: <a href="https://sc19.supercomputing.org/session/?sess=sess125" target="_blank">PHOTONICS</a><br>
           Date: Monday, 18 November 2019, 4:30pm - 5:30pm<br>
           Location:710
+        </p>
+
+        <h3>Presentations @ AIST Booth</h3>
+
+        <p class="indent-block lead">
+          <span class="presentation-title">SAGE2 Session</span><br>
+          <span class="presentation-speaker">Jason Haga, Maxine Brown</span><br>
+          Date: Tuesday, 19 November 2019, 2pm - 3:30pm<br>
+        </p>
+        <p class="indent-block lead">
+          <span class="presentation-title">ABCI Application Session</span><br>
+          <span class="presentation-speaker">Gerald Pao, Kyoung-Sook Kim, Katsuki Fujisawa</span><br>
+          Date: Tuesday, 19 November 2019, 4pm - 5pm<br>
+        </p>
+        <p class="indent-block lead">
+          <span class="presentation-title">SAGE2 BoF Redo</span><br>
+          <span class="presentation-speaker">Jason Haga, Maxine Brown</span><br>
+          Date: Wednesday, 20 November 2019, 11am - 12pm<br>
         </p>
 
         <!--h3>Press Release</h3>
