Update SC19 page

--- a/events/20191117-sc19/index.html
+++ b/events/20191117-sc19/index.html
@@ -93,8 +93,8 @@
         <p class="lead">
           AIST started operation of ABCI, which is a publicly available cloud infrastructure for
           AI research and development, from August 2018, and RWBC-OIL uses ABCI for AI research.
-          RWBC-OIL researchers from AIST and TokyoTech attend SC19 to provide presentation and
-          booth exhibition about ABCI, AI/BigData research projects.
+          RWBC-OIL researchers from AIST and TokyoTech attend SC19 to provide presentations and
+          booth exhibition about ABCI and AI/BigData research projects.
         </p>
 
         <h3>SC19 Booth Exhibition</h3>
@@ -107,9 +107,8 @@
         </p-->
         <p class="indent-block lead">
           Highlights at SC19 is presentations of RWBC-OIL research activities that use ABCI and TSUBAME3.0.
-          This year, three research papers and one poster from AIST and TokyoTech are presented.
+          This year, three research papers and three posters from AIST and TokyoTech are presented.
           There are also many talks from RWBC-OIL researchers at BoF, panels, workshop and exhibition booths.
-          We also present some of them at AIST booth #1117.
         </p>
         <p class="indent-block lead">
           Same as last year's SC, we present ABCI at the booth.
@@ -125,7 +124,7 @@
         <p class="indent-block lead">
           AIST booth is at #1117<br>
           TokyoTech booth is at #313<br>
-          <img src="./booth_map.png" alt="RWBC-OIL booth is #2409" style='height: 63%; width: 63%; object-fit: contain'>
+          <img src="./booth_map.png" alt="RWBC-OIL booth is #2409" style='height: 50%; width: 50%; object-fit: contain'>
         </p>
 
         <!--h4>Posters</h4>
