Update SC19 page

--- a/events/20191117-sc19/index.html
+++ b/events/20191117-sc19/index.html
@@ -194,7 +194,7 @@
         </p>
         <p class="indent-block lead">
           <span class="presentation-title"><a href="https://sc19.supercomputing.org/presentation/?id=pan121&sess=sess235" target="_blank">Open Science in a Changing HPC Landscape</a></span><br>
-          <span class="presentation-speaker">Satoshi Sekiguchi</span><br>
+          <span class="presentation-speaker">Jason Haga (on behalf of Satoshi Sekiguchi)</span><br>
           Date: Wednesday, 20 November 2019, 1:30pm-3pm<br>
           Location:201-203
         </p>
@@ -233,7 +233,7 @@
 
         <p class="indent-block lead">
           <span class="presentation-title">SAGE2 Session</span><br>
-          <span class="presentation-speaker">Jason Haga, Maxine Brown</span><br>
+          <span class="presentation-speaker">Jason Haga, Maxine Brown, Jason Leigh</span><br>
           Date: Tuesday, 19 November 2019, 2pm - 3:30pm<br>
         </p>
         <p class="indent-block lead">
@@ -243,7 +243,7 @@
         </p>
         <p class="indent-block lead">
           <span class="presentation-title">SAGE2 BoF Redo</span><br>
-          <span class="presentation-speaker">Jason Haga, Maxine Brown</span><br>
+          <span class="presentation-speaker">Jason Haga, Maxine Brown, Jason Leigh</span><br>
           Date: Wednesday, 20 November 2019, 11am - 12pm<br>
         </p>
 
