Add links to SC19 page

--- a/events/index.html
+++ b/events/index.html
@@ -94,12 +94,12 @@
 		<div class="col-md-12">
 		<!-- Add new event on top -->
 
-      <!--h3>SC 2019 Exhibitionでの研究成果展示</h3>
+      <h3>SC 2019 Exhibitionでの研究成果展示</h3>
       <ul>
         <li>Date: 2019/11/17 - 2019/11/22</li>
         <li>開催場所: デンバー, 、アメリカ</li>
         <li><a href="./20191117-sc19/index.html">詳細</a></li>
-      </ul-->
+      </ul>
 
       <h3>ABCIオープンセミナー in 京都「ビジネスに活かすＡＩ開発　〜課題と対策、そして活用へ〜」</h3>
       <ul>
