--- a/events/index-en.html
+++ b/events/index-en.html
@@ -94,12 +94,12 @@
       <div class="col-md-12">
       <!-- Add new event on top -->
 
-        <!--h3>Exhibit RWBC-OIL Reserch Activities at SC 2019</h3>
+        <h3>Exhibit RWBC-OIL Reserch Activities at SC 2019</h3>
         <ul>
           <li>Date: 2019/11/17 - 2019/11/22</li>
           <li>Venue: Dever, US</li>
           <li><a href="./20191117-sc19/index.html">More information</a></li>
-        </ul-->
+        </ul>
 
         <h3>Exhibit RWBC-OIL Reserch Activities at ISC 2019</h3>
         <ul>
