--- a/events/20191117-sc19/index.html
+++ b/events/20191117-sc19/index.html
@@ -247,6 +247,23 @@
           Date: Wednesday, 20 November 2019, 11am - 12pm<br>
         </p>
 
+        <h3>Workshop @ AIST Booth</h3>
+        <p class="indent-block lead">
+          <span class="presentation-title">Title: Approximate Computing in the Post-Moore Era (Mini-Symposium)</span><br>
+          Date: Tuesday, 19 November 2019, 10:15-12:00<br>
+        </p>
+
+        <p class="indent-block lead">
+          <span class="presentation-speaker"> Dr. Ryousei Takano from AIST           </span>          (5 minutes opening remarks)</span><br>
+          <span class="presentation-speaker"> Dr. Takano/Hirofuchi/Wahib from AIST   </span>  (10:20-10:40)  <span class="presentation-title">Overview of the Approximate Project at AIST</span><br>
+          <span class="presentation-speaker"> Dr. Michael O. Lam from JMU            </span>           (10:40-11:00)  <span class="presentation-title">Automated Software Tools for Mixed Precision</span><br>
+          <span class="presentation-speaker"> Dr. Leonardo Bautista from BSC         </span>        (11:00-11:20)  <span class="presentation-title">Aggressive Undervolting of FPGAs: Power & Reliability Trade-offs</span><br>
+          <span class="presentation-speaker"> Dr. Ignacio Laguna from LLNL           </span>          (11:20-11:40)  <span class="presentation-title">Performance-Driven Floating-Point Tuning for GPU Applications</span><br>
+          <span class="presentation-speaker"> Dr. Ikki Fujiwara from NII             </span>            (11:40-12:00)  <span class="presentation-title">High-Bandwidth Low-Latency Approximate Interconnection Networks</span><br>
+        </p>
+
+
+
         <!--h3>Press Release</h3>
 
         <p class="indent-block lead">
