--- a/events/index.html
+++ b/events/index.html
@@ -94,6 +94,13 @@
 		<div class="col-md-12">
 		<!-- Add new event on top -->
 
+			<h3>第2回 RWBC-OIL Workshop 「ABCIと国際連携」</h3>
+			<ul>
+			  <li>開催日程: 2020/01/20（月）</li>
+			  <li>開催場所: 東京工業大学 大岡山キャンパス 東工大蔵前会館 くらまえホール</li>
+			  <li><a href="https://unit.aist.go.jp/rpd-ith/ja/events/2019/rwbcws2.html" target="_blank">詳細</a></li>
+			</ul>
+
       <h3>SC 2019 Exhibitionでの研究成果展示</h3>
       <ul>
         <li>Date: 2019/11/17 - 2019/11/22</li>
