--- a/events/index-en.html
+++ b/events/index-en.html
@@ -94,6 +94,12 @@
       <div class="col-md-12">
       <!-- Add new event on top -->
 
+        <h3>The 2nd RWBC-OIL Workshop</h3>
+        <ul>
+          <li>Date: 20120/01/20</li>
+          <li>Venue: Kuramae Hall, Tokyo Tech Front</li>
+          <li><a href="./20200120-workshop02.html">More information</a></li>
+        </ul>
         <h3>Exhibit RWBC-OIL Reserch Activities at SC 2019</h3>
         <ul>
           <li>Date: 2019/11/17 - 2019/11/22</li>
